OO-3196. differentiate managed event from the other in the calendar view of courses